// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Menu 1`] = `
<div
  className="wrapper"
>
  <button
    aria-controls="123e4567-e89b-12d3-a456-426655440002"
    aria-expanded={false}
    aria-haspopup={true}
    className="button base hasIconAndLabel work secondary fullWidth"
    disabled={false}
    id="123e4567-e89b-12d3-a456-426655440001"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
      data-testid="more"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="_1R4_alABGZICCj4KPfBOIa"
        d="M170.667 512c0-47.13 38.205-85.333 85.333-85.333s85.333 38.204 85.333 85.333c0 47.13-38.205 85.333-85.333 85.333s-85.333-38.204-85.333-85.333zM426.667 512c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333zM768 426.667c-47.13 0-85.333 38.204-85.333 85.333s38.204 85.333 85.333 85.333c47.13 0 85.333-38.204 85.333-85.333s-38.204-85.333-85.333-85.333z"
      />
    </svg>
    <span
      className="base extraBold small uppercase green"
    >
      More Actions
    </span>
  </button>
</div>
`;

exports[`renders a Menu with custom activator 1`] = `
<div
  className="wrapper"
>
  <button
    aria-controls="123e4567-e89b-12d3-a456-426655440004"
    aria-expanded={false}
    aria-haspopup={true}
    className="button base work primary"
    disabled={false}
    id="123e4567-e89b-12d3-a456-426655440003"
    onClick={[Function]}
    type="button"
  >
    <span
      className="base extraBold small uppercase white"
    >
      Menu
    </span>
  </button>
</div>
`;
